// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`compile > basic file (mcp, http) 1`] = `
"// Generated by mcp-compiler - do not edit manually
import {McpServer} from '@modelcontextprotocol/sdk/server/mcp.js';
import {z} from 'zod';
import { StreamableHTTPServerTransport } from '@modelcontextprotocol/sdk/server/streamableHttp.js';
import * as http from 'node:http';
import {playWithNumbers} from "./input.js";

const adapter = new ZodJsonSchemaAdapter();
const server = new McpServer({
  name: "Generated MCP Server",
  version: "1.0.0",
});

server.registerTool(
    "playWithNumbers",
    {
        title: "playWithNumbers",
        description: "Plays with numbers",
        inputSchema: z.object({
      num: z.number()
    })
    },
    async ({num}) => {
        const output = await playWithNumbers(num);
        return {
    success: true,
    content: [{
      type: 'text',
      text: JSON.stringify(output, null, 2)
    }]
  };
    }
);

const transport = new HttpTransport(server, {port: 8080});
const httpServer = http.createServer(async (req, res) => {
  const transport = new StreamableHTTPServerTransport({
      sessionIdGenerator: undefined,
      enableJsonResponse: true
  });
  res.on('close', () => {
      transport.close();
  });
  await server.connect(transport);
  await transport.handleRequest(req, res, req.body);
});
httpServer.listen(8080);"
`;

exports[`compile > basic file (mcp, stdio) 1`] = `
"// Generated by mcp-compiler - do not edit manually
import {McpServer} from '@modelcontextprotocol/sdk/server/mcp.js';
import {z} from 'zod';
import { StdioServerTransport } from '@modelcontextprotocol/sdk/server/stdio.js';
import {playWithNumbers} from "./input.js";

const adapter = new ZodJsonSchemaAdapter();
const server = new McpServer({
  name: "Generated MCP Server",
  version: "1.0.0",
});

server.registerTool(
    "playWithNumbers",
    {
        title: "playWithNumbers",
        description: "Plays with numbers",
        inputSchema: z.object({
      num: z.number()
    })
    },
    async ({num}) => {
        const output = await playWithNumbers(num);
        return {
    success: true,
    content: [{
      type: 'text',
      text: JSON.stringify(output, null, 2)
    }]
  };
    }
);

const transport = new StdioServerTransport();
await server.connect(transport);"
`;

exports[`compile > basic file (tmcp, http) 1`] = `
"// Generated by mcp-compiler - do not edit manually
import {McpServer} from 'tmcp';
import {ZodJsonSchemaAdapter} from '@tmcp/adapter-zod';
import {z} from 'zod';
import {HttpTransport} from '@tmcp/transport-http';
import * as http from 'node:http';
import {playWithNumbers} from "./input.js";

const adapter = new ZodJsonSchemaAdapter();
const server = new McpServer(
  {
    name: "Generated MCP Server",
    version: "1.0.0",
    description: undefined,
  },
  {
    adapter,
    capabilities: {
    },
  },
);

server.tool(
  {
    name: "playWithNumbers",
    description: "Plays with numbers",
    schema: z.object({
      num: z.number()
    })
  },
  async ({num}) => {
    const result = await playWithNumbers(num);
    return {
    success: true,
    content: [{
      type: 'text',
      text: JSON.stringify(result, null, 2)
    }]
  };
  },
);

const transport = new HttpTransport(server, {port: 8080});
const httpServer = http.createServer(async (req, res) => {
  const response = await transport.respond(req);
  res.writeHead(response.status, response.headers);
  res.end(response.body);
});
httpServer.listen(8080);"
`;

exports[`compile > basic file (tmcp, stdio) 1`] = `
"// Generated by mcp-compiler - do not edit manually
import {McpServer} from 'tmcp';
import {ZodJsonSchemaAdapter} from '@tmcp/adapter-zod';
import {z} from 'zod';
import {StdioTransport} from '@tmcp/transport-stdio';
import {playWithNumbers} from "./input.js";

const adapter = new ZodJsonSchemaAdapter();
const server = new McpServer(
  {
    name: "Generated MCP Server",
    version: "1.0.0",
    description: undefined,
  },
  {
    adapter,
    capabilities: {
    },
  },
);

server.tool(
  {
    name: "playWithNumbers",
    description: "Plays with numbers",
    schema: z.object({
      num: z.number()
    })
  },
  async ({num}) => {
    const result = await playWithNumbers(num);
    return {
    success: true,
    content: [{
      type: 'text',
      text: JSON.stringify(result, null, 2)
    }]
  };
  },
);

const transport = new StdioTransport(server);
transport.listen();"
`;
